--- a/RPshop/package.json
+++ b/RPshop/package.json
@@ -33,6 +33,9 @@
     "@angular/compiler-cli": "^17.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.18.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.2.2"
   }
 }
