--- a/RPshop/package.json
+++ b/RPshop/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.9",
     "@stripe/stripe-js": "^2.3.0",
+    "annyang": "^2.6.1",
     "express": "^4.18.2",
     "ngx-stripe": "^17.0.1",
     "rxjs": "~7.8.0",
